--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
           </form>
         </div>
       </nav>
+    
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+        <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
    <h1 class="text-center text-primary mt-5">Hello welcome to my first project</h1>
     <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
