--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="ian-keefe-NBQhCKtg_9Y-unsplash.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="ian-keefe-NBQhCKtg_9Y-unsplash.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="ian-keefe-NBQhCKtg_9Y-unsplash.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
 </div>
