--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
 </div>
    <h1 class="text-center text-primary mt-5">Hello welcome to my first project</h1>
-    <div class="card" style="width: 18rem;">
+    <div class="card ml-auto mr-auto" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -69,7 +69,7 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card ml-auto mr-auto" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -77,7 +77,7 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card ml-auto mr-auto" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
