--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
 </div>
    <h1 class="text-center text-primary mt-5">Hello welcome to my first project</h1>
-    <div class="card ml-auto mr-auto" style="width: 18rem;">
+    <div class="card ml-auto mr-auto" style="width: 40rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -69,15 +69,15 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
-    <div class="card ml-auto mr-auto" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+    <div class="card ml-auto mr-auto" style="width: 40rem;">
+  <img src="..." class="card-img-top" alt="human error">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
-    <div class="card ml-auto mr-auto" style="width: 18rem;">
+    <div class="card ml-auto mr-auto" style="width: 40rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
